chore: I have fixed an issue that I was having with the background landing page image stretching really weird for large screens

--- a/assets/styles/index/index.css
+++ b/assets/styles/index/index.css
@@ -1,7 +1,7 @@
 body {
-   background-color: #11151c;
-   color: #e1e1e1;
-   width: 100vw;
+    background-color: #11151c;
+    color: #e1e1e1;
+    width: 100vw;
     font-size: 16px;
     margin-left: 0;
     margin-top: 0;
@@ -71,7 +71,7 @@ navbar {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-   /* align-items: center;
+    /* align-items: center;
     justify-items: flex-start;
     justify-content: space-evenly;
     align-content: center;*/
@@ -83,7 +83,7 @@ navbar {
     margin-left: 0;
     background-image: url("/assets/images/backgroundImage.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: center;
     background-position: center;
 }
 
@@ -93,15 +93,16 @@ navbar {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-   /* margin-top: .2em;*/
+    /* margin-top: .2em;*/
     background-color: #11151c;
     opacity: .85;
     width: 100vw;
     padding: 2px;
     margin-bottom: 3.3em;
-   /* line-height: 5px;*/
-   z-index: 1;
+    /* line-height: 5px;*/
+    z-index: 1;
 }
+
 
 /*#opening_screen h1 {
     font-size: 3em;
@@ -109,7 +110,7 @@ navbar {
 }*/
 
 #opening_screen p {
-  /*  flex-wrap: wrap;
+    /*  flex-wrap: wrap;
     font-size: 1.5em;
    line-height: .25em;
     justify-self: center;
